antlr-generated/com/compilers/parsers/CsubParser.java
// $ANTLR 3.4 C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g 2013-04-14 01:16:18

    package com.compilers.parsers;
    import java.util.HashMap;
    import com.compilers.AST.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class CsubParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AMPERSAND", "ASTERISK", "BAR", "BREAK", "CHAR", "CHARVALUE", "CLOSEBRACKET", "CLOSECURLY", "CLOSEPARENT", "COLON", "COMMA", "COMMENT", "CONJUNCTION", "CONST", "CONTINUE", "DECREMENT", "DIGIT", "DISJUNCTION", "DO", "ELSE", "EQUAL", "EQUALITY", "EXCLAMATION", "FALSE", "FLOAT", "FLOATVALUE", "FOR", "IDENT", "IF", "INCLUDE", "INCLUDESTART", "INCREMENT", "INT", "INTVALUE", "LARGER", "LETTER", "MAIN", "MINUS", "MULTILINE_COMMENT", "OPENBRACKET", "OPENCURLY", "OPENPARENT", "PERCENT", "PLUS", "QUESTION", "RETURN", "SEMICOLON", "SLASH", "SMALLER", "STRINGVALUE", "TRUE", "VOID", "WHILE", "WS"
    };

    public static final int EOF=-1;
    public static final int AMPERSAND=4;
    public static final int ASTERISK=5;
    public static final int BAR=6;
    public static final int BREAK=7;
    public static final int CHAR=8;
    public static final int CHARVALUE=9;
    public static final int CLOSEBRACKET=10;
    public static final int CLOSECURLY=11;
    public static final int CLOSEPARENT=12;
    public static final int COLON=13;
    public static final int COMMA=14;
    public static final int COMMENT=15;
    public static final int CONJUNCTION=16;
    public static final int CONST=17;
    public static final int CONTINUE=18;
    public static final int DECREMENT=19;
    public static final int DIGIT=20;
    public static final int DISJUNCTION=21;
    public static final int DO=22;
    public static final int ELSE=23;
    public static final int EQUAL=24;
    public static final int EQUALITY=25;
    public static final int EXCLAMATION=26;
    public static final int FALSE=27;
    public static final int FLOAT=28;
    public static final int FLOATVALUE=29;
    public static final int FOR=30;
    public static final int IDENT=31;
    public static final int IF=32;
    public static final int INCLUDE=33;
    public static final int INCLUDESTART=34;
    public static final int INCREMENT=35;
    public static final int INT=36;
    public static final int INTVALUE=37;
    public static final int LARGER=38;
    public static final int LETTER=39;
    public static final int MAIN=40;
    public static final int MINUS=41;
    public static final int MULTILINE_COMMENT=42;
    public static final int OPENBRACKET=43;
    public static final int OPENCURLY=44;
    public static final int OPENPARENT=45;
    public static final int PERCENT=46;
    public static final int PLUS=47;
    public static final int QUESTION=48;
    public static final int RETURN=49;
    public static final int SEMICOLON=50;
    public static final int SLASH=51;
    public static final int SMALLER=52;
    public static final int STRINGVALUE=53;
    public static final int TRUE=54;
    public static final int VOID=55;
    public static final int WHILE=56;
    public static final int WS=57;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public CsubParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public CsubParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return CsubParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g"; }


        /** Map variable name to Integer object holding value */
        HashMap symbolTable = new HashMap();



    // $ANTLR start "program"
    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:27:1: program : includes ( signature | function | declaration )* main ( declaration | function )* ;
    public final void program() throws RecognitionException {
        try {
            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:28:5: ( includes ( signature | function | declaration )* main ( declaration | function )* )
            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:29:9: includes ( signature | function | declaration )* main ( declaration | function )*
            {
            pushFollow(FOLLOW_includes_in_program64);
            includes();

            state._fsp--;
            if (state.failed) return ;

            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:30:9: ( signature | function | declaration )*
            loop1:
            do {
                int alt1=4;
                switch ( input.LA(1) ) {
                case VOID:
                    {
                    int LA1_1 = input.LA(2);

                    if ( (LA1_1==IDENT) ) {
                        int LA1_5 = input.LA(3);

                        if ( (LA1_5==OPENPARENT) ) {
                            switch ( input.LA(4) ) {
                            case VOID:
                                {
                                int LA1_8 = input.LA(5);

                                if ( (LA1_8==CLOSEPARENT) ) {
                                    int LA1_10 = input.LA(6);

                                    if ( (LA1_10==SEMICOLON) ) {
                                        alt1=1;
                                    }
                                    else if ( (LA1_10==OPENCURLY) ) {
                                        alt1=2;
                                    }


                                }


                                }
                                break;
                            case CHAR:
                            case FLOAT:
                            case INT:
                                {
                                int LA1_9 = input.LA(5);

                                if ( (LA1_9==CLOSEPARENT||LA1_9==COMMA) ) {
                                    alt1=1;
                                }
                                else if ( (LA1_9==IDENT) ) {
                                    alt1=2;
                                }


                                }
                                break;
                            case CLOSEPARENT:
                                {
                                int LA1_10 = input.LA(5);

                                if ( (LA1_10==SEMICOLON) ) {
                                    alt1=1;
                                }
                                else if ( (LA1_10==OPENCURLY) ) {
                                    alt1=2;
                                }


                                }
                                break;

                            }

                        }


                    }


                    }
                    break;
                case CHAR:
                case FLOAT:
                case INT:
                    {
                    int LA1_2 = input.LA(2);

                    if ( (LA1_2==IDENT) ) {
                        int LA1_6 = input.LA(3);

                        if ( (LA1_6==OPENPARENT) ) {
                            switch ( input.LA(4) ) {
                            case VOID:
                                {
                                int LA1_8 = input.LA(5);

                                if ( (LA1_8==CLOSEPARENT) ) {
                                    int LA1_10 = input.LA(6);

                                    if ( (LA1_10==SEMICOLON) ) {
                                        alt1=1;
                                    }
                                    else if ( (LA1_10==OPENCURLY) ) {
                                        alt1=2;
                                    }


                                }


                                }
                                break;
                            case CHAR:
                            case FLOAT:
                            case INT:
                                {
                                int LA1_9 = input.LA(5);

                                if ( (LA1_9==CLOSEPARENT||LA1_9==COMMA) ) {
                                    alt1=1;
                                }
                                else if ( (LA1_9==IDENT) ) {
                                    alt1=2;
                                }


                                }
                                break;
                            case CLOSEPARENT:
                                {
                                int LA1_10 = input.LA(5);

                                if ( (LA1_10==SEMICOLON) ) {
                                    alt1=1;
                                }
                                else if ( (LA1_10==OPENCURLY) ) {
                                    alt1=2;
                                }


                                }
                                break;

                            }

                        }
                        else if ( (LA1_6==COMMA||LA1_6==EQUAL||LA1_6==OPENBRACKET||LA1_6==SEMICOLON) ) {
                            alt1=3;
                        }


                    }
                    else if ( (LA1_2==ASTERISK) ) {
                        alt1=3;
                    }


                    }
                    break;
                case CONST:
                    {
                    alt1=3;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:30:13: signature
            	    {
            	    pushFollow(FOLLOW_signature_in_program79);
            	    signature();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:31:13: function
            	    {
            	    pushFollow(FOLLOW_function_in_program93);
            	    function();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;
            	case 3 :
            	    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:32:13: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_program108);
            	    declaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            pushFollow(FOLLOW_main_in_program130);
            main();

            state._fsp--;
            if (state.failed) return ;

            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:35:9: ( declaration | function )*
            loop2:
            do {
                int alt2=3;
                switch ( input.LA(1) ) {
                case CONST:
                    {
                    alt2=1;
                    }
                    break;
                case CHAR:
                case FLOAT:
                case INT:
                    {
                    int LA2_3 = input.LA(2);

                    if ( (LA2_3==ASTERISK) ) {
                        alt2=1;
                    }
                    else if ( (LA2_3==IDENT) ) {
                        int LA2_5 = input.LA(3);

                        if ( (LA2_5==OPENPARENT) ) {
                            alt2=2;
                        }
                        else if ( (LA2_5==COMMA||LA2_5==EQUAL||LA2_5==OPENBRACKET||LA2_5==SEMICOLON) ) {
                            alt2=1;
                        }


                    }


                    }
                    break;
                case VOID:
                    {
                    alt2=2;
                    }
                    break;

                }

                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:35:10: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_program141);
            	    declaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:35:24: function
            	    {
            	    pushFollow(FOLLOW_function_in_program145);
            	    function();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "program"



    // $ANTLR start "includes"
    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:42:1: includes : ( INCLUDESTART result+= INCLUDE )* ;
    public final void includes() throws RecognitionException {
        Token result=null;
        List list_result=null;

        try {
            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:43:5: ( ( INCLUDESTART result+= INCLUDE )* )
            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:44:9: ( INCLUDESTART result+= INCLUDE )*
            {
            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:44:9: ( INCLUDESTART result+= INCLUDE )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==INCLUDESTART) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:44:10: INCLUDESTART result+= INCLUDE
            	    {
            	    match(input,INCLUDESTART,FOLLOW_INCLUDESTART_in_includes181); if (state.failed) return ;

            	    result=(Token)match(input,INCLUDE,FOLLOW_INCLUDE_in_includes185); if (state.failed) return ;
            	    if (list_result==null) list_result=new ArrayList();
            	    list_result.add(result);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            if ( state.backtracking==0 ) {
                        for (Object token : list_result) 
                        {
                            String includeString = ((Token)token).getText(); // The token can also be given as argument if needed
                            new includeNode(includeString);
                            System.out.println("Created includeNode with argument: "+includeString);
                        }
                    }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "includes"



    // $ANTLR start "signature"
    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:55:1: signature : ( VOID | type ) IDENT OPENPARENT ( signatureArguments )? CLOSEPARENT SEMICOLON ;
    public final void signature() throws RecognitionException {
        try {
            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:56:5: ( ( VOID | type ) IDENT OPENPARENT ( signatureArguments )? CLOSEPARENT SEMICOLON )
            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:57:9: ( VOID | type ) IDENT OPENPARENT ( signatureArguments )? CLOSEPARENT SEMICOLON
            {
            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:57:9: ( VOID | type )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==VOID) ) {
                alt4=1;
            }
            else if ( (LA4_0==CHAR||LA4_0==FLOAT||LA4_0==INT) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:57:10: VOID
                    {
                    match(input,VOID,FOLLOW_VOID_in_signature235); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:57:17: type
                    {
                    pushFollow(FOLLOW_type_in_signature239);
                    type();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }


            match(input,IDENT,FOLLOW_IDENT_in_signature243); if (state.failed) return ;

            match(input,OPENPARENT,FOLLOW_OPENPARENT_in_signature245); if (state.failed) return ;

            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:57:41: ( signatureArguments )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==CHAR||LA5_0==FLOAT||LA5_0==INT||LA5_0==VOID) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:57:41: signatureArguments
                    {
                    pushFollow(FOLLOW_signatureArguments_in_signature247);
                    signatureArguments();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }


            match(input,CLOSEPARENT,FOLLOW_CLOSEPARENT_in_signature250); if (state.failed) return ;

            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_signature252); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "signature"



    // $ANTLR start "function"
    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:60:1: function : ( VOID | type ) IDENT OPENPARENT ( arguments )? CLOSEPARENT functionBody ;
    public final void function() throws RecognitionException {
        try {
            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:61:5: ( ( VOID | type ) IDENT OPENPARENT ( arguments )? CLOSEPARENT functionBody )
            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:62:9: ( VOID | type ) IDENT OPENPARENT ( arguments )? CLOSEPARENT functionBody
            {
            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:62:9: ( VOID | type )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==VOID) ) {
                alt6=1;
            }
            else if ( (LA6_0==CHAR||LA6_0==FLOAT||LA6_0==INT) ) {
                alt6=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }
            switch (alt6) {
                case 1 :
                    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:62:10: VOID
                    {
                    match(input,VOID,FOLLOW_VOID_in_function285); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:62:17: type
                    {
                    pushFollow(FOLLOW_type_in_function289);
                    type();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }


            match(input,IDENT,FOLLOW_IDENT_in_function292); if (state.failed) return ;

            match(input,OPENPARENT,FOLLOW_OPENPARENT_in_function294); if (state.failed) return ;

            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:62:40: ( arguments )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==CHAR||LA7_0==FLOAT||LA7_0==INT||LA7_0==VOID) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:62:40: arguments
                    {
                    pushFollow(FOLLOW_arguments_in_function296);
                    arguments();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }


            match(input,CLOSEPARENT,FOLLOW_CLOSEPARENT_in_function299); if (state.failed) return ;

            pushFollow(FOLLOW_functionBody_in_function301);
            functionBody();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "function"



    // $ANTLR start "declaration"
    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:65:1: declaration : ( ( ( CONST )? type ( ASTERISK )? IDENT ( EQUAL expression )? ( COMMA ( ASTERISK )? IDENT ( EQUAL expression )? )* SEMICOLON ) | arrayDeclaration );
    public final void declaration() throws RecognitionException {
        try {
            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:66:5: ( ( ( CONST )? type ( ASTERISK )? IDENT ( EQUAL expression )? ( COMMA ( ASTERISK )? IDENT ( EQUAL expression )? )* SEMICOLON ) | arrayDeclaration )
            int alt14=2;
            int LA14_0 = input.LA(1);

            if ( (LA14_0==CONST) ) {
                alt14=1;
            }
            else if ( (LA14_0==CHAR||LA14_0==FLOAT||LA14_0==INT) ) {
                int LA14_2 = input.LA(2);

                if ( (LA14_2==ASTERISK) ) {
                    alt14=1;
                }
                else if ( (LA14_2==IDENT) ) {
                    int LA14_3 = input.LA(3);

                    if ( (LA14_3==COMMA||LA14_3==EQUAL||LA14_3==SEMICOLON) ) {
                        alt14=1;
                    }
                    else if ( (LA14_3==OPENBRACKET) ) {
                        alt14=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 14, 3, input);

                        throw nvae;

                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 14, 2, input);

                    throw nvae;

                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 14, 0, input);

                throw nvae;

            }
            switch (alt14) {
                case 1 :
                    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:67:9: ( ( CONST )? type ( ASTERISK )? IDENT ( EQUAL expression )? ( COMMA ( ASTERISK )? IDENT ( EQUAL expression )? )* SEMICOLON )
                    {
                    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:67:9: ( ( CONST )? type ( ASTERISK )? IDENT ( EQUAL expression )? ( COMMA ( ASTERISK )? IDENT ( EQUAL expression )? )* SEMICOLON )
                    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:67:10: ( CONST )? type ( ASTERISK )? IDENT ( EQUAL expression )? ( COMMA ( ASTERISK )? IDENT ( EQUAL expression )? )* SEMICOLON
                    {
                    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:67:10: ( CONST )?
                    int alt8=2;
                    int LA8_0 = input.LA(1);

                    if ( (LA8_0==CONST) ) {
                        alt8=1;
                    }
                    switch (alt8) {
                        case 1 :
                            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:67:10: CONST
                            {
                            match(input,CONST,FOLLOW_CONST_in_declaration331); if (state.failed) return ;

                            }
                            break;

                    }


                    pushFollow(FOLLOW_type_in_declaration334);
                    type();

                    state._fsp--;
                    if (state.failed) return ;

                    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:67:22: ( ASTERISK )?
                    int alt9=2;
                    int LA9_0 = input.LA(1);

                    if ( (LA9_0==ASTERISK) ) {
                        alt9=1;
                    }
                    switch (alt9) {
                        case 1 :
                            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:67:22: ASTERISK
                            {
                            match(input,ASTERISK,FOLLOW_ASTERISK_in_declaration336); if (state.failed) return ;

                            }
                            break;

                    }


                    match(input,IDENT,FOLLOW_IDENT_in_declaration339); if (state.failed) return ;

                    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:67:38: ( EQUAL expression )?
                    int alt10=2;
                    int LA10_0 = input.LA(1);

                    if ( (LA10_0==EQUAL) ) {
                        alt10=1;
                    }
                    switch (alt10) {
                        case 1 :
                            // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:67:39: EQUAL expression
                            {
                            match(input,EQUAL,FOLLOW_EQUAL_in_declaration342); if (state.failed) return ;

                            pushFollow(FOLLOW_expression_in_declaration344);
                            expression();

                            state._fsp--;
                            if (state.failed) return ;

                            }
                            break;

                    }


                    // C:\\Users\\Tarek\\workspaceCompilers\\csub\\src\\main\\antlr3\\com\\compilers\\parsers\\Csub.g:68:9: ( COMMA ( ASTERISK )? IDENT ( EQUAL expression )? )*
                    loop13:
                    do {
                        int alt13=2;
                        int LA13_0 = input.LA(1);

                        if ( (LA13_0==COMMA) ) {
                            alt13=1;
                        }


                        switch (alt13) {
                    	case 1 :
